--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -511,7 +511,7 @@
     <string name="online_bank">在线网银</string>
     <string name="online_juan">JuanCash</string>
     <string name="online_dispenshing">出款</string>
-    <string name="online_online_bank">网银线上</string>
+    <string name="online_online_bank">GCash / 其他</string>
     <string name="online_gcash">Gcash</string>
     <string name="online_grab">GrabPay</string>
     <string name="online_maya">PayMaya</string>
