交易状况新增全部选项

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1123,4 +1123,5 @@
     <string name="cancel_auto">Rejected</string>
     <string name="cancel_manual">Void</string>
     <string name="error_input_has_blank">Incorrect input. Use english only, don\'t enter the continuous space.</string>
+    <string name="all">All</string>
 </resources>
