--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -575,8 +575,8 @@
     <string name="hint_please_enter_withdraw_password">withdrawal password</string>
     <string name="add_new">Add</string>
     <string name="add_credit_card">Add Bank Card</string>
-    <string name="add_crypto_card">Adding virtual coins</string>
-    <string name="add_e_wallet">Adding eWallet</string>
+    <string name="add_crypto_card">Add USDT</string>
+    <string name="add_e_wallet">Add eWallet</string>
     <string name="add_credit_or_virtual">add bank card / USDT / eWallet</string>
     <string name="add_credit_or_e_wallet">add bank card / eWallet</string>
     <string name="create_bank">Bank</string>
