--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1153,4 +1153,6 @@
     <string name="cancel_auto">Từ chối</string>
     <string name="cancel_manual">Vô hiệu</string>
     <string name="error_input_has_blank"> Đầu vào không chính xác. Chỉ sử dụng tiếng Anh, không nhập khoảng trắng liên tục.</string>
+    <string name="coming_soon">Sắp có</string>
+    <string name="esports">eSports</string>
 </resources>
