--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1123,4 +1123,9 @@
     <string name="cancel_auto">Rejected</string>
     <string name="cancel_manual">Void</string>
     <string name="error_input_has_blank">Incorrect input. Use english only, don\'t enter the continuous space.</string>
+
+    <!--region coming soon-->
+    <string name="esports">eSports</string>
+    <string name="coming_soon">Coming Soon</string>
+    <!--endregion-->
 </resources>
