修改中文全部

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -144,7 +144,7 @@
     <string name="title_eps_more">更高赔率</string>
     <string name="game_soon">即将开赛</string>
     <string name="label_in_play_games">滚球盘</string>
-    <string name="label_all">所有</string>
+    <string name="label_all">全部</string>
     <string name="label_match_recommend">赛事推荐</string>
     <string name="label_highlight">精选</string>
     <string name="display_all">显示全部</string>
