--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1030,6 +1030,7 @@
     <string name="responsible">Responsible Gaming</string>
     <string name="terms_conditions">Terms &amp; Conditions</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="affiliate">Affiliate</string>
     <string name="help">NEED HELP NOW?</string>
     <string name="faqs">FAQs</string>
     <string name="live_chat">Live Chat</string>
