[Add] footer 官方合作夥伴翻譯

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1032,6 +1032,7 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="affiliate">Affiliate</string>
     <string name="help">NEED HELP NOW?</string>
+    <string name="official_partner">Official Partner</string>
     <string name="faqs">FAQs</string>
     <string name="live_chat">Live Chat</string>
     <string name="contact">Contact Us</string>
