--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1070,6 +1070,7 @@
     <string name="privacy_policy">Chính Sách Bảo Mật</string>
     <string name="affiliate">Chi nhánh</string>
     <string name="help">CẦN TRỢ GIÚP?</string>
+    <string name="official_partner">Đối tác chính thức</string>
     <string name="faqs">Câu Hỏi Thường Gặp</string>
     <string name="live_chat">Trò Chuyện Trực Tuyến</string>
     <string name="contact">Liên Hệ</string>
