--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1123,4 +1123,12 @@
     <string name="cancel_auto">Rejected</string>
     <string name="cancel_manual">Void</string>
     <string name="error_input_has_blank">Incorrect input. Use english only, don\'t enter the continuous space.</string>
+
+    <!--region 確認年齡彈窗-->
+    <string name="dialog_age_verify_statement">OKBet is committed to providing a safe, comfortable gaming experience for all our customers.\n\nFor the vast majority of people, gaming is an enjoyable leisure activity. However, we recognize that there are times when gaming ceases being fun for some customers.\n\nWe strongly encourage you to take some time to read our RESPONSIBLE GAMING infographic and statement before you proceed. Users aged 21 and below are strictly not allowed.\n\nOur responsibility is to help our customers gamble safely and responsibly, reduce the risk of harm, and help people who need treatment get it.\n\nDon\'t hesitate to contact keepitfun@pagcor.ph if you or your family member is having gaming issues.</string>
+    <string name="dialog_age_verify_hint">Please verify that you are 21 years of ages or older to enter this site</string>
+    <string name="dialog_age_verify_confirm">I AM OVER 21 YEARS OLD</string>
+    <string name="dialog_age_verify_exit">EXIT</string>
+    <!--endregion-->
+
 </resources>
