--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -11,7 +11,7 @@
     <string name="message_network_no_connect">vui lòng kiểm tra kết nối mạng rồi thử lại</string>
     <string name="message_network_timeout">kết nối mạng vượt quá thời gian, vui lòng thử lại</string>
     <string name="error">Nhắc nhở</string>
-    <string name="error_input_empty">Trường hợp bắt buộc cần điền</string>
+    <string name="error_input_empty">không thể để trống</string>
     <string name="error_incompatible_format">Các ký tự bạn đã nhập không phù hợp</string>
     <string name="error_wx_incompatible_format">lỗi định dạng Wechat ID không hợp lệ</string>
     <string name="congratulation_win">Xin chúc mừng bạn, đơn cược số đuô: %1$s Chiến thắng: %2$s</string>
@@ -759,7 +759,6 @@
     <string name="all_in_plat">Tất cả chuyển vào</string>
     <string name="write_suggestion">Điền đề xuất</string>
     <string name="can_input_1_to_500_word">Có thể nhập 1-500 từ</string>
-    <string name="must_fill_this_column">Trường hợp bắt buộc cần điền</string>
     <string name="third_game_ky">Game bài KY</string>
     <string name="choose_title">Chọn trạng thái</string>
     <string name="odd_type_title">Thể loại kèo</string>
