--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -105,9 +105,10 @@
     <string name="verification_code">Mã xác nhận</string>
     <string name="verification_code_by_sms">Mã xác nhận SMS</string>
     <string name="hint_verification_code">Vui lòng nhập Đăng ký mã xác nhận</string>
-    <string name="error_verification_code">Mã xác nhận đăng ký không đúng</string>
+    <string name="error_verification_code_by_login">Đăng nhập mã xác nhận không đúng</string>
+    <string name="error_verification_code">Đăng ký mã xác nhận không đúng</string>
     <string name="hint_verification_code_by_sms">(SMS)</string>
-    <string name="error_verification_code_by_sms">Mã xác nhận không đúng</string>
+    <string name="error_verification_code_by_sms">SMS mã xác nhận không đúng</string>
     <string name="get_verification_code">Gửi</string>
     <string name="send_timer">Tên tài khoản này đã tồn tại</string>
     <string name="get_valid_code_fail_point">yêu cầu nhận mã xác nhận thất bại, vui lòng nhấp để thử lại !</string>
