--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1017,6 +1017,9 @@
     <string name="self_limit_per_bet_limit_user_none">None</string>
     <string name="self_limit_per_bet_limit_user_limit"> (Maximum limited bet:%1$s %3$s-%2$s %3$s)</string>
     <string name="self_limit_error">The field format is incorrect, please enter an integer.</string>
+    <string name="self_limit_input_password_for_confirm">Please enter the login password to confirm the application.</string>
+    <string name="self_limit_input_password_for_modification">Please enter the login password to confirm the modification.</string>
+    <string name="self_limit_submit_button">Confirm</string>
     <!--自我禁制-->
 
     <!--登入手機驗證-->
