[Refactor] 2858 英文文案修改、有些充值渠道名稱在充值提現都會出現，有詢問PM要不要一起改，目前沒得到回覆。(只修改文案部分)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="version_name">Version %s</string>
     <string name="btn_pass">Skip</string>
     <string name="login_account">Account</string>
-    <string name="please_input_account">(your member account)</string>
+    <string name="please_input_account">(your username)</string>
     <string name="please_input_password">(your login password)</string>
     <string name="login_password">Password</string>
     <string name="remember_password">Save this password</string>
@@ -84,7 +84,7 @@
     <string name="city">City</string>
     <string name="hint_city">(Please enter city)</string>
     <string name="we_chat">Wechat</string>
-    <string name="identity">Verification Identity</string>
+    <string name="identity">Verification Status</string>
     <string name="hint_we_chat_number">(Wechat ID)</string>
     <string name="error_we_chat_number">Wechat ID formatted incorrectly</string>
     <string name="zalo">Zalo</string>
@@ -296,16 +296,16 @@
     <string name="more_service">More service</string>
     <string name="account_transfer">Transfer Limit</string>
     <string name="money_recycle_succeed">Recovery limit successfully</string>
-    <string name="news_center">My Information</string>
+    <string name="news_center">My Messages</string>
     <string name="help_center">Help</string>
-    <string name="fund_detail">Fund Detail</string>
+    <string name="fund_detail">Funds Details</string>
     <string name="feedback">Feedback</string>
     <string name="promotion">Promotions</string>
     <string name="need_improve">Need to be completed</string>
-    <string name="profile_info">Your Info</string>
+    <string name="profile_info">My Details</string>
     <string name="avatar">Profile photo</string>
     <string name="nickname">Nickname</string>
-    <string name="password_setting">Setting password</string>
+    <string name="password_setting">Password Setting</string>
     <string name="modify_avatar">Edit profile photo</string>
     <string name="choose_a_photo_from_the_album">Select a photo from camera roll</string>
     <string name="take_a_picture">Take a photo</string>
@@ -313,7 +313,7 @@
     <string name="change_nickname">Change nickname</string>
     <string name="hint_nickname">characters</string>
     <string name="error_nickname"><![CDATA[Nickname must be 6–20 characters long and contain English & Chinese letter]]></string>
-    <string name="setting_password">Setting password</string>
+    <string name="setting_password">Password Setting</string>
     <string name="withdrawal_password">Withdrawal Password</string>
     <string name="current_login_password">Current login password</string>
     <string name="current_withdrawal_password">Current withdrawal password</string>
@@ -488,7 +488,7 @@
     <string name="btn_service">Contact customer service</string>
     <string name="btn_service_maintain">Customer service</string>
     <string name="txv_transfer_pay">Transfer</string>
-    <string name="txv_online_pay">Top Up Online</string>
+    <string name="txv_online_pay">Online Deposit</string>
     <string name="txv_crypto_pay">Virtual currency transfer</string>
     <string name="error_recharge_amount">Incorrect format or value of top-up amount</string>
     <string name="error_first_recharge_amount">The first deposit amount cannot be less than %s</string>
@@ -558,7 +558,7 @@
     <string name="go_to_setting">To set up</string>
     <string name="message_withdraw_maintain">The withdrawal system is being upgraded，Please waiting</string>
     <string name="text_money_get_success">Withdrawal successful, please wait for customer service personnel check</string>
-    <string name="withdraw_setting">Withdraw Setting</string>
+    <string name="withdraw_setting">Withdrawal Setting</string>
     <string name="tail_number">End no</string>
     <string name="bind_start_time">Bind</string>
     <string name="bind_credit_card_not_yet">You do not have a bank card/crypto bound</string>
@@ -663,9 +663,9 @@
     <string name="already_bet_complete">You have been successful bets</string>
     <string name="complete">Completed</string>
     <string name="winnable_amount_colon">To Win：</string>
-    <string name="finance">Fund Detail</string>
+    <string name="finance">Funds Details</string>
     <string name="record_recharge">Deposit Records</string>
-    <string name="record_withdrawal">Withdrawal Record</string>
+    <string name="record_withdrawal">Withdrawal Records</string>
     <string name="record_conversion">Conversion Record</string>
     <string name="record_history">Transaction History</string>
     <string name="recharge_state_success">Success</string>
@@ -673,16 +673,16 @@
     <string name="recharge_state_processing">Processing</string>
     <string name="all_order_status">All Status</string>
     <string name="recharge_channel_all">All Method</string>
-    <string name="recharge_channel_online">Top Up Online</string>
-    <string name="recharge_channel_bank">Bank card transfer</string>
+    <string name="recharge_channel_online">Online Deposit</string>
+    <string name="recharge_channel_bank">Bank Transfer</string>
     <string name="recharge_channel_alipay">Alipay transfer</string>
     <string name="recharge_channel_weixin">Wechat transfer</string>
     <string name="recharge_channel_cft">Tenpay transfer</string>
-    <string name="recharge_channel_crypto">USDT transaction</string>
+    <string name="recharge_channel_crypto">USDT Transactions</string>
     <string name="recharge_channel_gcash">Gcash</string>
-    <string name="recharge_channel_grabpay">GrabPay</string>
-    <string name="recharge_channel_paymaya">PayMaya</string>
-    <string name="recharge_channel_admin">System add money</string>
+    <string name="recharge_channel_grabpay">Grabpay</string>
+    <string name="recharge_channel_paymaya">Maya</string>
+    <string name="recharge_channel_admin">Manual Deposit</string>
     <string name="recharge_log_order_time">Time</string>
     <string name="recharge_log_recharge_amount">Deposit Amount</string>
     <string name="recharge_log_channel_type">Method</string>
@@ -692,9 +692,9 @@
     <string name="withdraw_log_state_pass">Completed</string>
     <string name="withdraw_log_state_un_pass">Failed</string>
     <string name="withdraw_log_type_all">All Method</string>
-    <string name="withdraw_log_type_bank_trans">Bank withdraw</string>
-    <string name="withdraw_log_type_admin">Back-end deduct money</string>
-    <string name="withdraw_log_crypto_transfer">USDT withdraw</string>
+    <string name="withdraw_log_type_bank_trans">Bank</string>
+    <string name="withdraw_log_type_admin">Manual</string>
+    <string name="withdraw_log_crypto_transfer">USDT</string>
     <string name="log_detail_title">Check details</string>
     <string name="log_detail_trans_num_sub">Order ID：</string>
     <string name="log_detail_trans_num_sub2">Trading number</string>
@@ -1087,14 +1087,14 @@
     <string name="grant_location_permission_on_setting">Enable location permission on the settings page.</string>
 
     <!--歷史紀錄start-->
-    <string name="text_account_history_type">Type</string>
+    <string name="text_account_history_type">Method</string>
     <string name="text_account_history_time">Transaction time</string>
     <string name="text_account_history_number">Order no.</string>
     <string name="text_account_history_amount">Transaction amount</string>
     <string name="text_account_history_balance">Balance</string>
 
     <string name="text_account_history_bet">Bet</string>
-    <string name="text_account_history_recharge">Deposit</string>
+    <string name="text_account_history_recharge">Amount</string>
     <string name="text_account_history_withdraw">Withdraw</string>
     <string name="text_account_history_activity">Activity</string>
     <string name="text_account_history_credit">Credit</string>
