--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -607,7 +607,8 @@
     <string name="bet_info_list_bet_quota">Số tiền cược : </string>
     <string name="bet_receipt_bet_quota">Số tiền đặt cược : </string>
     <string name="bet_info_list_win_quota">Số tiền có thể thắng : </string>
-    <string name="bet_list_win_quota">Số tiền có thể thắng:</string>
+    <string name="bet_list_win_quota">Số tiền có thể thắng</string>
+    <string name="bet_receipt_win_quota">Số tiền có thể thắng:</string>
     <string name="bet_info_list_add_more">Thêm nhiều lựa chọn</string>
     <string name="bet_info_list_bet">Cá cược</string>
     <string name="bet_info_list_odds_change">Chấp nhận các thay đổi và đặt cược</string>
