--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -607,7 +607,8 @@
     <string name="bet_info_list_bet_quota">投注金额：</string>
     <string name="bet_receipt_bet_quota">投注金额：</string>
     <string name="bet_info_list_win_quota">可赢金额：</string>
-    <string name="bet_list_win_quota">可赢金额：</string>
+    <string name="bet_list_win_quota">可赢金额</string>
+    <string name="bet_receipt_win_quota">可赢金额：</string>
     <string name="bet_info_list_add_more">更多选择</string>
     <string name="bet_info_list_bet">投注</string>
     <string name="bet_info_list_odds_change">接受变更并投注</string>
