--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1136,4 +1136,9 @@
     <string name="coming_soon">Coming Soon</string>
     <string name="esports">eSports</string>
 
+    <!--region 注單模塊調整-->
+    <string name="bet_info_bet_lock_hint">注单盘口已关闭</string>
+    <string name="bet_info_no_parlay_hint">赛事暂无支持串关</string>
+    <!--endregion-->
+
 </resources>
