--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1138,4 +1138,9 @@
     <string name="coming_soon">Coming Soon</string>
     <!--endregion-->
 
+    <!--region 注單模塊調整-->
+    <string name="bet_info_bet_lock_hint">注单盘口已关闭</string>
+    <string name="bet_info_no_parlay_hint">赛事暂无支持串关</string>
+    <!--endregion-->
+
 </resources>
