调整：貨幣單位PHP移到 數字的前面

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -429,7 +429,7 @@
     <string name="title_address">地址：</string>
     <string name="title_deposit_money">存款金额</string>
     <string name="title_payer">账号</string>
-    <string name="edt_hint_deposit_money">限额 %1$s～%2$s</string>
+    <string name="edt_hint_deposit_money">限额 %1$s %2$s～%3$s</string>
     <string name="edt_hint_payer">请输入您的账号</string>
     <string name="edt_hint_deposit_money_new">限额 %1$s-%2$s</string>
     <string name="title_real_name">认证姓名</string>
@@ -492,10 +492,10 @@
     <string name="title_transaction_id">区块链交易ID</string>
     <string name="hint_transaction_id">请输入您的区块链ID</string>
     <string name="hint_fee_rate">・手续费：%1$s</string>
-    <string name="hint_fee_amount">・手续费金额：%1$s %s</string>
+    <string name="hint_fee_amount">・手续费金额：%1$s %2$s </string>
     <string name="hint_feeback_rate">・返利：%1$s</string>
-    <string name="hint_feeback_amount">・返利金额：%1$s %s</string>
-    <string name="txv_recharge_money">・存款金额：%1$s %s</string>
+    <string name="hint_feeback_amount">・返利金额：%1$s %2$s </string>
+    <string name="txv_recharge_money">・存款金额：%1$s %2$s </string>
     <string name="title_recharge_account">存款账号</string>
     <string name="title_choose_recharge_account">选择存款账号</string>
     <string name="title_recharge_address">充币地址:</string>
@@ -553,14 +553,14 @@
     <string name="select_bank">选择银行</string>
     <string name="withdraw_amount">提款金额</string>
     <string name="withdraw_password">提款密码</string>
-    <string name="total_withdrawal">提款总计 %1$s </string>
+    <string name="total_withdrawal">提款总计 %1$s%2$s </string>
     <string name="withdraw_uw_check">扣除金额</string>
     <string name="withdraw_all">全部提取</string>
-    <string name="withdraw_handling_fee_hint">· 手续费率：%1$s%% 须支付手续费：%2$s</string>
+    <string name="withdraw_handling_fee_hint">· 手续费率：%1$s%% 须支付手续费：%2$s%3$s</string>
     <string name="withdraw_crypto_exchange_rate_hint">· 汇率：%1$s</string>
-    <string name="withdraw_crypto_amount_hint">· 提款金额：%1$s %s</string>
-    <string name="withdraw_crypto_fee_hint">· 提款手续费：%1$s %s</string>
-    <string name="hint_please_enter_withdraw_amount">限额%1$s~%2$s</string>
+    <string name="withdraw_crypto_amount_hint">· 提款金额：%1$s%2$s</string>
+    <string name="withdraw_crypto_fee_hint">· 提款手续费：%1$s%2$s</string>
+    <string name="hint_please_enter_withdraw_amount">限额%1$s%2$s~%3$s</string>
     <string name="hint_four_number_password">请输入提款密码</string>
     <string name="hint_please_enter_withdraw_password">请输入提款密码</string>
     <string name="add_new">新增</string>
