--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1172,7 +1172,7 @@
     <string name="esports">eSports</string>
 
     <!--region 注單模塊調整-->
-    <string name="bet_info_bet_lock_hint">注单盘口已关闭</string>
+    <string name="bet_info_bet_lock_hint">Kèo chấp đã đóng</string>
     <string name="bet_info_no_parlay_hint">Trận đấu không hỗ trợ đá xiên.</string>
     <!--endregion-->
 
