--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,6 +39,7 @@
     <string name="hint_recommend_code">(Invite Code)</string>
     <string name="error_recommend_code">Invite code not available</string>
     <string name="member_account">Account</string>
+    <string name="member_account_in_profile">Username</string>
     <string name="hint_member_account"><![CDATA[(4-16 characters (English & numbers))]]></string>
     <string name="error_member_account">Username must be 4–16 characters and contain letter and numbers</string>
     <string name="desc_register_checking_account">Checking account</string>
@@ -685,10 +686,10 @@
     <string name="recharge_channel_paymaya">PayMaya</string>
     <string name="recharge_channel_admin">System add money</string>
     <string name="recharge_log_order_time">Time</string>
-    <string name="recharge_log_recharge_amount">Deposit Amount</string>
+    <string name="recharge_log_recharge_amount">Amount</string>
     <string name="recharge_log_channel_type">Method</string>
     <string name="recharge_log_order_state">Status</string>
-    <string name="withdraw_log_withdraw_amount">Withdraw</string>
+    <string name="withdraw_log_withdraw_amount">Amount</string>
     <string name="withdraw_log_state_processing">Processing</string>
     <string name="withdraw_log_state_pass">Completed</string>
     <string name="withdraw_log_state_un_pass">Failed</string>
