fix：25132 自我禁制-帳號登入限制/每次投注上限，確認申請彈窗中未輸入密碼送出後顯示的「此栏位为必填栏位」越南翻譯與原型不符

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,6 +12,7 @@
     <string name="message_network_timeout">The connection has timed out, please try again.</string>
     <string name="error">Error</string>
     <string name="error_input_empty">This field is required</string>
+    <string name="error_input_empty_new">This field is required.</string>
     <string name="error_incompatible_format">The name that you entered is not valid</string>
     <string name="error_wx_incompatible_format">Wechat ID formatted incorrectly</string>
     <string name="congratulation_win">Congratulations，betting slip suffix code:%1$s Winning :%2$s</string>
