--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -12,6 +12,7 @@
     <string name="message_network_timeout">kết nối mạng vượt quá thời gian, vui lòng thử lại</string>
     <string name="error">Nhắc nhở</string>
     <string name="error_input_empty">không thể để trống</string>
+    <string name="error_input_empty_new">Trường này là bắt buộc.</string>
     <string name="error_incompatible_format">Các ký tự bạn đã nhập không phù hợp</string>
     <string name="error_wx_incompatible_format">lỗi định dạng Wechat ID không hợp lệ</string>
     <string name="congratulation_win">Xin chúc mừng bạn, đơn cược số đuô: %1$s Chiến thắng: %2$s</string>
