fix：25220 越南語系下，自我禁制-帳號登入限制/每次投注上限，確認申請彈窗中的取消按鈕(名稱)錯誤

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,7 @@
     <string name="btn_confirm">Confirm</string>
     <string name="btn_determine">Confirm</string>
     <string name="btn_cancel">Cancel</string>
+    <string name="btn_cancel_new">Cancel</string>
     <string name="btn_retry">Try again</string>
     <string name="loading_get_config">Fast-loading</string>
     <string name="error_config_title">Bad line</string>
