--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -715,7 +715,7 @@
     <string name="feedback_tabName_problem">Suggestions</string>
     <string name="feedback_tabName_record">Feedback history</string>
     <string name="feedback_description">If you have a good suggestion for the game or platform or find a Bug to submit, the official customer service will reply within 48 hours. We will timely fix bugs or refer to your feedback to continuously optimize our products and services. (If there are many people who give feedback on the same suggestion or Bug, the bonus will be given to the first person who gives feedback. Remember to give feedback as soon as you find any problem.)</string>
-    <string name="feedback_description_money">If the suggestion is adopted or the Bug is verified, the maximum reward is 3000 %s (or other equivalent currency).</string>
+    <string name="feedback_description_money">If the suggestion is adopted or the Bug is verified, the maximum reward is %s 3000 (or other equivalent currency).</string>
     <string name="feedback_submit_succeed">Feedback submitted successfully</string>
     <string name="all_status">All Status</string>
     <string name="feedback_last_reply_time">Time</string>
